force-app/main/default/objects/OrderBookAssosiation__c/OrderBookAssosiation__c.object-meta.xml
<CustomObject>
    <label>OrderBookAssociation</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>OrderBookAssosiation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderBookAssociations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>