force-app/main/default/objects/OrderBookAssosiation__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Books</relationshipLabel>
    <relationshipName>OrderBookAssociations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>